Refactor `.mypy.ini` to exclude more specific directories and patterns

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -8,4 +8,12 @@ check_untyped_defs = true
 disallow_incomplete_defs = true
 disallow_untyped_defs = true
 no_implicit_optional = true
-exclude = "(.venv|tests|venv)"
+exclude = (?x)(
+          \.venv
+          | tests
+          | venv
+          | AIAssistantSnippet
+          | .*AIA.*
+          | \.pyi$
+    )
+#pycharm-args-default: --follow-imports silent --exclude \.pyi$
