--- a/.github/workflows/buildmultiarchandpush.yml
+++ b/.github/workflows/buildmultiarchandpush.yml
@@ -1,11 +1,18 @@
 name: BuildAndPushMultiarch
 
-on:
-  push:
-    branches:
-      - "main"
+#on:
+#  push:
+#    branches:
+#      - "main"
+#
+#  pull_request:
 
-  pull_request:
+on:
+  workflow_run:
+    workflows: ["run pytests"]
+    branches: ["main"]
+    types:
+      - completed
 
 # CHECK: https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#workflow_run
 #on:
@@ -25,6 +32,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       # Get the repository's code
       # NOTE: not really needed since build-push-action uses the "Git context"
@@ -59,6 +67,7 @@ jobs:
         with:
           context: .
           platforms: linux/amd64,linux/aarch64
+          # github.event_name ist hier dann immer "workflow_run"
           push: ${{ github.event_name != 'pull_request' }}
           tags: "xomoxcc/somestuff:latest"
           # tags: ${{ steps.<meta_id>.outputs.tags }}
