--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -1,16 +1,23 @@
 name: run pytests
 
 on:
-  push:
-    branches:
-      - "main"
+  workflow_run:
+    workflows: ["black-lint and static type check"]
+    branches: ["main"]
+    types:
+      - completed
 
-  pull_request:
-
+#on:
+#  push:
+#    branches:
+#      - "main"
+#
+#  pull_request:
 
 jobs:
   pytest:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: checkout code
         uses: actions/checkout@v5
