Refactored and extended MQTT handling, added new modules, and updated dependencies.

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -13,7 +13,7 @@ exclude = (?x)(
           | tests
           | venv
           | AIAssistantSnippet
-          | .*AIA.*
           | \.pyi$
+	  | dinogame
     )
 #pycharm-args-default: --follow-imports silent --exclude \.pyi$
