Refactor mypy command to include specific directories

--- a/.github/workflows/blacknmypy.yml
+++ b/.github/workflows/blacknmypy.yml
@@ -36,5 +36,5 @@ jobs:
         run: black -l 120 --check  .
 
       - name: static type checking with mypy
-        run: make tcheck
-        #run: mypy *.py **/*.py
+        #run: make tcheck
+        run: mypy *.py ecowittstuff/*py llmstuff/*.py mqttstuff/*.py dnsstuff/*.py
