Rename workflows to improve clarity and organization
[skip actions]

--- a/.github/workflows/buildmultiarchandpush.yml
+++ b/.github/workflows/buildmultiarchandpush.yml
@@ -9,7 +9,7 @@ name: BuildAndPushMultiarch
 
 on:
   workflow_run:
-    workflows: ["run pytests"]
+    workflows: ["mypy and pytests"]
     branches: ["main"]
     types:
       - completed
