--- a/.github/workflows/mypynpytests.yml
+++ b/.github/workflows/mypynpytests.yml
@@ -1,23 +1,23 @@
-name: run pytests
+name: mypy and pytests
 
 on:
-  workflow_run:
-    workflows: ["black-lint and static type check"]
-    branches: ["main"]
-    types:
-      - completed
+  push:
+    branches:
+      - "main"
+
+  pull_request:
 
 #on:
-#  push:
-#    branches:
-#      - "main"
-#
-#  pull_request:
+#  workflow_run:
+#    workflows: ["black-lint and static type check"]
+#    branches: ["main"]
+#    types:
+#      - completed
 
 jobs:
   pytest:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: checkout code
         uses: actions/checkout@v5
@@ -39,6 +39,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements-dev.txt
+
+      - name: static type checking with mypy
+        #run: make tcheck
+        run: mypy *.py ecowittstuff/*py llmstuff/*.py mqttstuff/*.py dnsstuff/*.py
 
       - name: run pytest
         # run: make tests
