--- a/.mypy.ini
+++ b/.mypy.ini
@@ -14,6 +14,12 @@ exclude = (?x)(
           | venv
           | AIAssistantSnippet
           | \.pyi$
-	  | dinogame
+	      | dinogame
     )
 #pycharm-args-default: --follow-imports silent --exclude \.pyi$
+
+[mypy-netatmostuff.lnetatmo]
+check_untyped_defs = false
+disallow_untyped_defs = false
+# ignore_missing_imports = true
+# disallow_untyped_calls = false
