--- a/.github/workflows/mypynpytests.yml
+++ b/.github/workflows/mypynpytests.yml
@@ -35,14 +35,19 @@ jobs:
           echo GH-SHA: ${{ github.sha }}
           tree
 
+      - name: installing make
+        run: |
+          apt update && apt install -y make
+
       - name: installing pip-packages
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements-dev.txt
 
       - name: static type checking with mypy
-        #run: make tcheck
-        run: mypy *.py ecowittstuff/*py llmstuff/*.py mqttstuff/*.py dnsstuff/*.py
+        run: make tcheck
+        # better via makefile -> avoid doubling command/package listing...
+        # run: mypy *.py ecowittstuff/*py llmstuff/*.py mqttstuff/*.py dnsstuff/*.py netatmostuff/*.py
 
       - name: run pytest
         # run: make tests
