Refactor(wasserstand): update MQTT topics structure and configuration

--- a/config.yaml
+++ b/config.yaml
@@ -98,14 +98,14 @@ mqtt_topics:
     pressurefeed:
       topic: "netatmo/pressure"
       subscribe: false
-  wasserstandsmesser:
-    mafeed:
+  wasserstand:
+    ma:
       topic: "esp32/esp32_9191919191/ma"
       subscribe: false
     busvoltage:
       topic: "esp32/esp32_9191919191/busvoltage"
       subscribe: false
-    wasserstandfeed:
+    wasserstand:
       topic: "nodered/hydrostatics/hydrostatic0/status"
       subscribe: false
 
