--- a/.github/workflows/buildmultiarchandpush.yml
+++ b/.github/workflows/buildmultiarchandpush.yml
@@ -69,7 +69,7 @@ jobs:
           platforms: linux/amd64,linux/aarch64
           # github.event_name ist hier dann immer "workflow_run"
           push: ${{ github.event_name != 'pull_request' }}
-          tags: "xomoxcc/somestuff:latest"
+          tags: "xomoxcc/somestuff:latest,xomoxcc/somestuff:py314trixie"
           # tags: ${{ steps.<meta_id>.outputs.tags }}
           # labels: ${{ steps.<meta_id>.outputs.labels }}
 
