Update development dependencies and improve formatting in `update_badge.py` script
[skip actions]

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,13 +1,16 @@
 -r requirements.txt
 
-pre-commit==4.2.*
+
+pre-commit==4.5.*
 
 # linting
-isort==6.0.*
-black==25.11.*
-mypy==1.18.*
+isort==7.0.*
+black==25.12.*
+mypy==1.19.*
 
-pytest==8.3.*
+pytest==9.0.*
+# needed for pytest
+httpx
 
 # local black-connect-daemon
 #aiohttp==3.11.*
@@ -21,3 +24,4 @@ types-requests>=2.32.4.20250913
 
 # gguf
 # accelerate
+
