--- a/.github/workflows/buildmultiarchandpush.yml
+++ b/.github/workflows/buildmultiarchandpush.yml
@@ -38,6 +38,8 @@ jobs:
       # NOTE: not really needed since build-push-action uses the "Git context"
       - name: Checkout
         uses: actions/checkout@v5
+        with:
+          submodules: recursive
 
       # https://github.com/docker/setup-qemu-action
       - name: Set up QEMU
