Update `.mypy.ini` to include `mqttstuff` in `mypy_path`

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -18,6 +18,8 @@ exclude = (?x)(
     )
 #pycharm-args-default: --follow-imports silent --exclude \.pyi$
 
+mypy_path = .:mqttstuff
+
 [mypy-netatmostuff.lnetatmo]
 check_untyped_defs = false
 disallow_untyped_defs = false
