--- a/.github/workflows/mypynpytests.yml
+++ b/.github/workflows/mypynpytests.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v5
+        with:
+          submodules: recursive
 
       - name: setting up python env
         uses: actions/setup-python@v6
