Remove `mqttstuff` submodule and dependencies, replace with PyPI package `mqttstuff==0.0.5`

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -16,9 +16,9 @@ exclude = (?x)(
           | \.pyi$
 	      | dinogame
     )
-#pycharm-args-default: --follow-imports silent --exclude \.pyi$
 
-mypy_path = .:mqttstuff
+#pycharm-args-default: --follow-imports silent --exclude \.pyi$
+#mypy_path = .:mqttstuff
 
 [mypy-netatmostuff.lnetatmo]
 check_untyped_defs = false
