Update base image to use `slim-trixie` variant in `Dockerfile`

--- a/python314pandasmultiarch/Dockerfile
+++ b/python314pandasmultiarch/Dockerfile
@@ -1,6 +1,6 @@
 ARG python_version=3.14
 ARG pandas_version=2.2.3
-ARG debian_version=trixie
+ARG debian_version=slim-trixie
 
 FROM python:${python_version}-${debian_version} AS builder
 
