Refactor Nginx service initialization and cleanup
- Renamed `01-check-env-services` to `s6-check-env-services.sh`.
- Removed `set -x` for cleaner logs.
- Updated `Dockerfile` to set `S6_STAGE2_HOOK` for the renamed script.
- Removed redundant blank lines in scripts.

[skip actions]

--- a/tangstuff/Dockerfile
+++ b/tangstuff/Dockerfile
@@ -245,7 +245,7 @@ EOF
 
 ADD $BPATH/s6-initstuff/ /etc/
 
-# /etc/cont-init.d/01-check-env
+ENV S6_STAGE2_HOOK=/etc/s6-check-env-services.sh
 
 # ENTRYPOINT ["tini", "--"]
 # CMD ["/runtang.sh"]
