Update HAProxy sidecar command and remove unused down markers
- Adjusted HAProxy command in k3s deployment to use `tini` with the correct script.
- Removed obsolete `down` scripts for HAProxy and Nginx in s6 overlay.

[skip actions]

--- a/tangstuff/k3s_tang_deployment_sidecar.yml
+++ b/tangstuff/k3s_tang_deployment_sidecar.yml
@@ -47,7 +47,8 @@ spec:
               mountPath: /var/lib/tang
         - name: tang-haproxy-sidecar
           image: xomoxcc/tang:latest
-          command: [ "/init", "tail", "-f", "/dev/null" ]
+          # command: [ "/init", "tail", "-f", "/dev/null" ]
+          command: [ "tini", "--", "/bin/bash", "/etc/s6-overlay/s6-rc.d/haproxy/run" ]
           restartPolicy: Always
           ports:
             - containerPort: 80
