Introduce enhanced multi-architecture build workflows
- Added structured and modular build scripts for Python 3.14 JIT, Mosquitto 2.1, Tang, and Pandas multi-arch images.
- Improved Docker and Podman handling with unified multi-arch image creation support and platform-specific optimizations.
- Introduced environment-driven ARGs for flexibility and updated tagging logic to streamline version management.
- Leveraged Podman VM workflows to handle platform emulation and image transfers seamlessly.

[skip actions]

--- a/python314jit/Dockerfile
+++ b/python314jit/Dockerfile
@@ -1,4 +1,8 @@
-FROM buildpack-deps:trixie
+ARG debian_version=trixie
+
+FROM buildpack-deps:${debian_version}
+
+ARG debian_version
 
 # https://github.com/docker-library/python/blob/master/3.14/trixie/Dockerfile
 
