Disable dynamic security plugin and adjust file permissions in Mosquitto Docker setup
- Commented out the dynamic security plugin in `mosquitto_test.conf`.
- Simplified ACL rules and noted compatibility issues with 2.1rc3.
- Adjusted file permissions for configuration, ACL, and dynamic security files to `0600`.

[skip actions]

--- a/mosquitto-2.1/mosquitto_test.conf
+++ b/mosquitto-2.1/mosquitto_test.conf
@@ -19,8 +19,8 @@ plugin_opt_password_file /mosquitto/config/mosquitto.passwd
 global_plugin /usr/lib/mosquitto_acl_file.so
 plugin_opt_acl_file /mosquitto/config/mosquitto.acl
 
-global_plugin /usr/lib/mosquitto_dynamic_security.so
-plugin_opt_config_file /mosquitto/data/dynamic-security.json
+# global_plugin /usr/lib/mosquitto_dynamic_security.so
+# plugin_opt_config_file /mosquitto/data/dynamic-security.json
 
 # new persistence via sqlite
 global_plugin /usr/lib/mosquitto_persist_sqlite.so
@@ -30,6 +30,17 @@ plugin_opt_db_file /mosquitto/data/mosquitto.sqlite
 # persistence true
 # persistence_location /mosquitto/data/          
 # autosave_interval 300
+
+listener 9001
+enable_proxy_protocol 2
+protocol websockets
+socket_domain ipv4
+
+listener 9883
+socket_domain ipv4
+enable_proxy_protocol 2
+protocol http_api
+http_dir /usr/share/mosquitto/dashboard
 
 log_dest file /mosquitto/log/mosquitto.log
 # max_keepalive 69
@@ -47,16 +58,3 @@ log_type unsubscribe
 connection_messages true
 log_timestamp true
 log_timestamp_format [%Y-%m-%dT%H:%M:%S]
-
-
-listener 9001
-enable_proxy_protocol 2
-protocol websockets
-socket_domain ipv4
-
-listener 9883
-socket_domain ipv4
-enable_proxy_protocol 2
-protocol http_api
-http_dir /usr/share/mosquitto/dashboard
-
