Add custom patch for enhanced IP logging in Mosquitto
- Introduced `log-with-ip.patch` to include client IP addresses in disconnect log messages.
- Updated Dockerfile to apply the patch during the build process.
- Enhanced `DOCKERHUB_OVERVIEW.md` and `README.md` to document the new logging capability, enabling fail2ban integration.

[skip actions]

--- a/mosquitto-2.1/Dockerfile
+++ b/mosquitto-2.1/Dockerfile
@@ -59,6 +59,10 @@ RUN set -x && mkdir -p /build/mosq && \
     tar --strip=1 -xf /tmp/mosq.tar.gz -C /build/mosq && \
     rm /tmp/mosq.tar.gz
 
+# Getting mosquitto to log IPs
+COPY log-with-ip.patch /log-with-ip.patch
+RUN cd /build/mosq && patch -p1 < /log-with-ip.patch
+
 # somehow having all cpu cores when building in podman-vm-qemu, this fails since rc3
 
 RUN set -x && make -C /build/mosq -j "$(( $(nproc) / 2))" \
