Update Dockerfile: comment out EXPOSE directive for $PORT
[skip actions]

--- a/tangstuff/Dockerfile
+++ b/tangstuff/Dockerfile
@@ -195,7 +195,7 @@ ENV TANGPORT=$TANGPORT
 ENV HAPROXYACCEPTPROXY=$HAPROXYACCEPTPROXY
 ENV NGINXACCEPTPROXY=$NGINXACCEPTPROXY
 
-EXPOSE $PORT
+# EXPOSE $PORT
 
 COPY Dockerfile /Dockerfile
 COPY README.md /README.md
