Add `gcalstuff` and `k3shelperstuff` modules with corresponding updates
- Introduced `gcalstuff`: a CLI tool for creating Google Calendar events with day-view confirmation.
- Added `k3shelperstuff`: a utility for syncing local kubeconfig with remote K3s server credentials.
- Updated `Dockerfile` to include `gcalstuff` and `k3shelperstuff`.
- Updated `requirements.txt` for new dependencies (`google-auth`, `google-auth-oauthlib`, `google-api-python-client`, `requests`).
- Enhanced `Makefile` to bind required volumes for `gcalstuff` and `k3shelperstuff`.
- Updated project `README.md` with descriptions and usage details for the new modules.

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,12 +21,17 @@ pyroute2
 
 ollama
 google-genai
+google-auth
+google-auth-oauthlib
+google-api-python-client
 
 pydantic
 pydantic-settings
 pytz
 pydantic-extra-types
 email-validator
+
+requests
 
 paho-mqtt
 schedule
