Update mypy configuration to exclude `nfs-subdir-external-provisioner`

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -15,6 +15,7 @@ exclude = (?x)(
           | AIAssistantSnippet
           | \.pyi$
 	      | dinogame
+          | nfs-subdir-external-provisioner
     )
 
 #pycharm-args-default: --follow-imports silent --exclude \.pyi$
